{{$NEXT}}
  - Increase DBD::SQLite dependency to 1.54 for FTS5 support.
  - Add db attribute to Mojo::SQLite::Results and use it to prevent connections
    from being cached for reuse while results are active.

3.000     2017-07-20 01:16:50 EDT
  - Changed default for max_connections attribute to 1.
  - Added support for sharing the database connection cache between multiple
    Mojo::SQLite objects. (based on Mojo::Pg 4.0)
  - Added parent attribute to Mojo::SQLite.
  - Fixed database connection leak with automatic migrations.
  - Removed deprecated Mojo::SQLite::PubSub and associated methods and attributes.
    SQLite's serverless nature means it does not have the ability to support
    client notifications, so it is not possible to implement an efficient
    pubsub system as in for example PostgreSQL, Redis, or websockets.

2.002     2017-06-01 14:16:34 EDT
  - Add no_wal option to prevent enabling WAL mode on connection.

2.001     2017-02-18 15:36:16 EST
  - Set name_sep in default SQL::Abstract object to support proper quoting of
    table and column names.

2.000     2017-02-11 17:03:53 EST
  - Add support for generating queries with SQL::Abstract. (based on Mojo::Pg 3.0)
  - Add abstract attribute to Mojo::SQLite.
  - Add delete, insert, select, and update methods to Mojo::SQLite::Database.

1.004     2017-01-17 00:10:51 EST
  - Use Mojo::File from Mojolicious 7.15 instead of deprecated
    Mojo::Util slurp function. (#9)

1.003     2016-12-11 16:30:31 EST
  - Add links to alternatives for deprecated Mojo::SQLite::PubSub.

1.002     2016-11-30 11:17:56 EST
  - Improved contextual caller information in query error messages. (#6)
  - Fix memory leak when reusing the same database handle many times. (#7)

1.001     2016-11-15 02:32:27 EST
  - Deprecate Mojo::SQLite::PubSub and associated methods and attributes.
    SQLite's serverless nature means it does not have the ability to support
    client notifications, so it is not possible to implement an efficient